[package]
name = "iced-shoelace"
version = "0.1.0"
edition = "2024"

[features]
default = ["iced/hot"]

[dependencies]
iced = { git = "https://github.com/nrjais/iced", branch = "editor", features = [
  "advanced",
  "debug",
  "highlighter",
  "lazy",
  "sipper",
  "tokio",
  "web-colors",
  "wgpu",
] }

iced_core = { git = "https://github.com/nrjais/iced", branch = "editor", features = [
  "advanced",
] }
iced_widget = { git = "https://github.com/nrjais/iced", branch = "editor", features = [
  "advanced",
] }
